src/snapshots/parse_idb@injected64.i64__entry_points.snap
---
hash: B25FACD98689C9A1
source: src/test.rs
expression: entry_points
---
[
 (
  name: "DllEntryPoint",
  address: 6442470536,
  forwarded: None,
  entry_type: Some((
   comment: None,
   is_const: false,
   is_volatile: false,
   type_variant: Function((
    calling_convention: Some(Stdcall),
    ret: (
     comment: None,
     is_const: false,
     is_volatile: false,
     type_variant: Typeref((
      ref_type: None,
      typeref_value: Name(Some("BOOL")),
     )),
    ),
    args: [
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Typeref((
        ref_type: None,
        typeref_value: Name(Some("HINSTANCE")),
       )),
      ),
      loc: None,
      flags: None,
     ),
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Typeref((
        ref_type: None,
        typeref_value: Name(Some("DWORD")),
       )),
      ),
      loc: None,
      flags: None,
     ),
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Typeref((
        ref_type: None,
        typeref_value: Name(Some("LPVOID")),
       )),
      ),
      loc: None,
      flags: None,
     ),
    ],
    retloc: None,
    method: None,
    is_noret: false,
    is_pure: false,
    is_high: false,
    is_static: false,
    is_virtual: false,
    is_const: false,
    is_constructor: false,
    is_destructor: false,
   )),
  )),
 ),
 (
  name: "test",
  address: 6442470544,
  forwarded: None,
  entry_type: None,
 ),
]