src/snapshots/parse_idb@injected64.i64__fchunks.snap
---
hash: C9E3E3DD78ED239E
source: src/test.rs
expression: fchunks
---
[
 ((
  address: (
   start: (6442455040),
   end: (6442470112),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 66,
   frsize: 1832,
   frregs: 0,
   argsize: 0,
   pntqty: 19,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470112),
   end: (6442470283),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 68,
   frsize: 4152,
   frregs: 0,
   argsize: 0,
   pntqty: 2,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470284),
   end: (6442470455),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 70,
   frsize: 4152,
   frregs: 0,
   argsize: 0,
   pntqty: 2,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470456),
   end: (6442470533),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 72,
   frsize: 4136,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470536),
   end: (6442470542),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 195,
   frsize: 0,
   frregs: 0,
   argsize: 0,
   pntqty: 0,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470544),
   end: (6442470712),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 74,
   frsize: 808,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442470712),
   end: (6442471641),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 76,
   frsize: 16536,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442471644),
   end: (6442474700),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 78,
   frsize: 18232,
   frregs: 0,
   argsize: 0,
   pntqty: 13,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442474700),
   end: (6442477563),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 80,
   frsize: 18200,
   frregs: 0,
   argsize: 0,
   pntqty: 13,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442477564),
   end: (6442477754),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 82,
   frsize: 72,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442477756),
   end: (6442477860),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 84,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442477860),
   end: (6442478441),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 86,
   frsize: 104,
   frregs: 0,
   argsize: 0,
   pntqty: 16,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442478444),
   end: (6442481223),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 88,
   frsize: 16712,
   frregs: 0,
   argsize: 0,
   pntqty: 16,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442481224),
   end: (6442483847),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 90,
   frsize: 16696,
   frregs: 0,
   argsize: 0,
   pntqty: 16,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442483848),
   end: (6442484175),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 92,
   frsize: 2120,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442484176),
   end: (6442484230),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 94,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442484232),
   end: (6442484930),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 96,
   frsize: 65624,
   frregs: 0,
   argsize: 0,
   pntqty: 13,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442484932),
   end: (6442485186),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 98,
   frsize: 72,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442485188),
   end: (6442485629),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 100,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 3,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442485632),
   end: (6442485778),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 102,
   frsize: 72,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442485780),
   end: (6442485951),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 104,
   frsize: 88,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442485952),
   end: (6442486154),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 106,
   frsize: 584,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442486156),
   end: (6442487566),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 108,
   frsize: 1768,
   frregs: 0,
   argsize: 0,
   pntqty: 13,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442487568),
   end: (6442487847),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 4227,
   frsize: 136,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442487848),
   end: (6442488080),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 112,
   frsize: 120,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442488080),
   end: (6442488312),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 114,
   frsize: 120,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442488312),
   end: (6442488940),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 116,
   frsize: 1832,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442488940),
   end: (6442489587),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 118,
   frsize: 1832,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442489588),
   end: (6442490245),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 120,
   frsize: 1832,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442490248),
   end: (6442490686),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 122,
   frsize: 152,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442490688),
   end: (6442491037),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 124,
   frsize: 184,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442491040),
   end: (6442493025),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 126,
   frsize: 1032,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442493028),
   end: (6442493543),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 128,
   frsize: 88,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442493544),
   end: (6442493663),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 130,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442493664),
   end: (6442493839),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 132,
   frsize: 56,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442493840),
   end: (6442494462),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 134,
   frsize: 120,
   frregs: 0,
   argsize: 0,
   pntqty: 9,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442494464),
   end: (6442500243),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 136,
   frsize: 760,
   frregs: 0,
   argsize: 0,
   pntqty: 19,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442500244),
   end: (6442502903),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 138,
   frsize: 1032,
   frregs: 0,
   argsize: 0,
   pntqty: 2,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: Some(15663088),
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442502904),
   end: (6442503512),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 140,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442503512),
   end: (6442503678),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 142,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442503680),
   end: (6442503878),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 144,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442503880),
   end: (6442505166),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 146,
   frsize: 200,
   frregs: 0,
   argsize: 0,
   pntqty: 16,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442505168),
   end: (6442505316),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 148,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442505316),
   end: (6442505450),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 150,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442505452),
   end: (6442507545),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 152,
   frsize: 2744,
   frregs: 0,
   argsize: 0,
   pntqty: 18,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442507548),
   end: (6442507911),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 154,
   frsize: 472,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442507912),
   end: (6442508286),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 156,
   frsize: 488,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442508288),
   end: (6442508352),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 158,
   frsize: 40,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442508352),
   end: (6442508707),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 160,
   frsize: 2088,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442508708),
   end: (6442509041),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 162,
   frsize: 72,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442509044),
   end: (6442510470),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 164,
   frsize: 184,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442510472),
   end: (6442512473),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 166,
   frsize: 216,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442512476),
   end: (6442514867),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 168,
   frsize: 296,
   frregs: 0,
   argsize: 0,
   pntqty: 16,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442514868),
   end: (6442515230),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 170,
   frsize: 72,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442515232),
   end: (6442515825),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 172,
   frsize: 104,
   frregs: 0,
   argsize: 0,
   pntqty: 12,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442515828),
   end: (6442515983),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 174,
   frsize: 120,
   frregs: 0,
   argsize: 0,
   pntqty: 4,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 2,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442515984),
   end: (6442516533),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 176,
   frsize: 136,
   frregs: 0,
   argsize: 0,
   pntqty: 8,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 1,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442516536),
   end: (6442517794),
  ),
  flags: (21504),
  extra: NonTail((
   frame: 178,
   frsize: 216,
   frregs: 0,
   argsize: 0,
   pntqty: 13,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
 ((
  address: (
   start: (6442517824),
   end: (6442517902),
  ),
  flags: (21572),
  extra: NonTail((
   frame: 180,
   frsize: 16,
   frregs: 0,
   argsize: 0,
   pntqty: 2,
   llabelqty: 0,
   regvarqty: 0,
   regargqty: 0,
   color: None,
   tailqty: 0,
   fpd: 0,
  )),
 ), Some(([], (
  ty: None,
 )))),
]