src/snapshots/parse_idb@injected64.i64__ida_info.snap
---
hash: 108984320C0333DC
source: src/test.rs
expression: ida_info
---
(
 version: 700,
 target: (
  processor: [
   109,
   101,
   116,
   97,
   112,
   99,
  ],
  assembler: 0,
 ),
 genflags: (3),
 lflags: (1039),
 database_change_count: 8,
 input: (
  file_format: Pe,
  operating_system: 0,
  application_type: 0,
 ),
 special_segment_entry_size: 0,
 af: (3758096375, 7),
 addresses: (
  loading_base: 0,
  initial_ss: 18446744073709551615,
  initial_cs: 1,
  initial_ip: 6442470536,
  initial_ea: (6442470536),
  initial_sp: 18446744073709551615,
  main_ea: (18446744073709551615),
  min_ea: (6442455040),
  max_ea: (6442528768),
  original_min_ea: (6442455040),
  original_max_ea: (6442528768),
  privrange: (
   start: (18374686479671623680),
   end: (18374686479680012288),
  ),
  netdelta: 0,
 ),
 suspiciousness_limits: (
  low: Some((6442455040)),
  high: Some((8796092887040)),
 ),
 xrefs: (
  max_depth: 16,
  max_displayed_xrefs: 2,
  max_displayed_type_xrefs: 2,
  max_displayed_strlit_xrefs: 1,
  xrefflag: (15),
 ),
 names: (
  max_autogenerated_name_length: 15,
  dummy_names: Ea,
 ),
 demangler: (
  short_form: 245612135,
  long_form: 104857607,
  name: (0),
 ),
 listname: (7),
 indent: 16,
 cmt_ident: 40,
 margin: 70,
 listing: (
  xref_margin: 80,
 ),
 outflag: (1908),
 cmtflg: (1),
 limiter: (3),
 bin_prefix_size: 0,
 prefflag: (1),
 strlits: (
  flags: (19),
  break_: 10,
  leading_zeroes: 0,
  name_prefix: [
   97,
  ],
  serial_number: 0,
 ),
 strtype: 0,
 data_carousel: 23,
 compiler: (
  is_guessed: true,
  compiler: VisualStudio,
  sizeof: (
   cm: Some(NN),
   int: 4,
   bool: 1,
   enum_: Some(4),
   short: Some(2),
   long: Some(4),
   longlong: Some(8),
   long_double: Some(8),
  ),
  alignment: None,
 ),
 abibits: (0),
 appcall_options: 0,
)