src/snapshots/parse_idb@injected64.i64__input_file.snap
---
hash: 13F96849804BECBF
source: src/test.rs
expression: input_file
---
"C:\\Temp\\injected64.bin\0"