src/snapshots/parse_idb@injected64.i64__input_file_sha256.snap
---
hash: 6362C114589B1DE9
source: src/test.rs
expression: input_file_sha256
---
Some((144, 179, 104, 77, 99, 198, 111, 60, 99, 99, 28, 145, 133, 150, 3, 227, 208, 120, 41, 226, 52, 91, 220, 136, 226, 118, 173, 249, 204, 199, 170, 146))