src/snapshots/parse_idb@injected64.i64__nam.snap
---
hash: 65261C54A5A4978E
source: src/test.rs
expression: nam
---
Some((
 names: [
  (6442455040),
  (6442470112),
  (6442470284),
  (6442470456),
  (6442470536),
  (6442470544),
  (6442470712),
  (6442471644),
  (6442474700),
  (6442477564),
  (6442477756),
  (6442477860),
  (6442478444),
  (6442481224),
  (6442483848),
  (6442484176),
  (6442484232),
  (6442484932),
  (6442485188),
  (6442485632),
  (6442485780),
  (6442485952),
  (6442486156),
  (6442487568),
  (6442487848),
  (6442488080),
  (6442488312),
  (6442488940),
  (6442489588),
  (6442490248),
  (6442490688),
  (6442491040),
  (6442493028),
  (6442493544),
  (6442493664),
  (6442493840),
  (6442494464),
  (6442500244),
  (6442502904),
  (6442503512),
  (6442503680),
  (6442503880),
  (6442505168),
  (6442505316),
  (6442505452),
  (6442507548),
  (6442507912),
  (6442508288),
  (6442508352),
  (6442508708),
  (6442509044),
  (6442510472),
  (6442512476),
  (6442514868),
  (6442515232),
  (6442515828),
  (6442515984),
  (6442516536),
  (6442517824),
  (6442520576),
  (6442520584),
  (6442521656),
  (6442521758),
  (6442521826),
  (6442521839),
  (6442524672),
 ],
))